welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: not found: value getMondLargeur
		x=getMondLargeur()-1-diag
                  ^